--- a/src/components/Stage1/style.module.css
+++ b/src/components/Stage1/style.module.css
@@ -17,9 +17,14 @@
     background-color: rgba(240, 248, 255, 0.523);
 }
 
+.red_box,
 .green_box{
     width: 100%;
     height: 100%;
     background-color: rgb(59, 229, 59);
+}
+
+.red_box{
+    background-color: rgb(202, 30, 0);
 }
 
