--- a/src/App.css
+++ b/src/App.css
@@ -26,5 +26,5 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #bca025;
+  background-color: #1a1e2c;
 }
