--- a/src/App.css
+++ b/src/App.css
@@ -26,5 +26,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background-color: #1a1e2c;
+  position: relative;
 }
