--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,28 @@ body{
   background-color: #1a1e2c;
   position: relative;
 }
+
+.end_game{
+  padding: 10px;
+  width: 300px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid rgb(255, 255, 255);
+  color: white;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.restart{
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: white;
+  color: #1A1E2C;
+}
